Fix up spacing on api browser

--- a/hlx_statics/blocks/api-browser.css
+++ b/hlx_statics/blocks/api-browser.css
@@ -32,6 +32,7 @@ main .api-browser .api-cards .api-card .api-icon {
 
 main .api-browser .filters {
     width: 300px;
+    padding-left: 64px;
 }
 
 main .api-browser h2{
